# warpdesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ca.md  README.es.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  BRANDING.md  DEVELOPMENT.md  LOCALIZATION.md
packaging/aur/: .SRCINFO  PKGBUILD  io.warpdesk.app.desktop  warpdesk-launch
scripts/: generate_screenshot.py  install_local.sh  smoke_run.py  warpdesk-launch
site/: index.html  styles.css
site/ca/: index.html
site/es/: index.html
src/warpdesk/: app.py  i18n.py  icons.py  models.py  profile_store.py  theme.py  warp_cli.py  window.py
