[project]
name = "warpdesk"
version = "0.1.0"
description = "Qt desktop client for Cloudflare WARP on Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
warpdesk = "warpdesk.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

